navbar outline done (issue #2)

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <![endif]-->
         <div id="navbar" class="navbar">
             <div class="logo">
-                Logo Here
+                <img src="public/logo.png" width="90px" height="90px" />
             </div>
             <ul>
                 <li>
-                    item 1
+                    <a href="page2.html">Page 2</a>
                 </li>
                 <li>
-                    item 2
+                    <a href="page3.html">Page 3</a>
                 </li>
                 <li>
-                    item 3
+                    <a href="page4.html">Page 4</a>
                 </li>
-            </ul>
+            </ul>            
         </div>
         
         <script src="" async defer></script>
