--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <![endif]-->
         <div id="navbar" class="navbar">
             <div class="logo">
-                <img src="public/logo.png" width="90px" height="90px" />
+                <a href="index.html">
+                    <img src="public/logo.png" width="90px" height="90px" />
+                </a>
             </div>
             <ul>
                 <li>
-                    <a href="page2.html">Page 2</a>
+                    <a href="pricing.html">Pricing</a>
                 </li>
                 <li>
                     <a href="page3.html">Page 3</a>
