--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -10,34 +10,33 @@
         <!--For development purposes only-->
         <meta http-equiv="refresh" content="5">
 
-        <title>Song Rating Website: COMP 333 Assignment</title>
-        <meta name="description" content="This is the landing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
+        <title>Pricing</title>
+        <meta name="description" content="This is the FAQs page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
-    <body id="front-page">
+    <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="navbar" class="navbar">
             <div class="logo">
-                <a href="index.html">
-                    <img src="public/logo.png" width="90px" height="90px" />
+                <a href="../index.html">
+                    <img src="../public/logo.png" width="90px" height="90px" />
                 </a>
             </div>
             <ul>
                 <li>
-                    <a href="pages/pricing.html">Pricing</a>
+                    <a href="pricing.html">Pricing</a>
                 </li>
                 <li>
-                    <a href="pages/testimonials.html">Testimonials</a>
+                    <a href="testimonials.html">Testimonials</a>
                 </li>
                 <li>
-                    <a href="pages/faqs.html">FAQs</a>
+                    <a href="faqs.html">FAQs</a>
                 </li>
             </ul>            
         </div>
-        
         <script src="" async defer></script>
     </body>
 </html>
