--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -13,7 +13,7 @@
         <title>Pricing</title>
         <meta name="description" content="This is the pricing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -21,8 +21,8 @@
         <![endif]-->
         <div id="navbar" class="navbar">
             <div class="logo">
-                <a href="index.html">
-                    <img src="public/logo.png" width="90px" height="90px" />
+                <a href="../index.html">
+                    <img src="../public/logo.png" width="90px" height="90px" />
                 </a>
             </div>
             <ul>
@@ -30,10 +30,10 @@
                     <a href="pricing.html">Pricing</a>
                 </li>
                 <li>
-                    <a href="page3.html">Page 3</a>
+                    <a href="testimonials.html">Testimonials</a>
                 </li>
                 <li>
-                    <a href="page4.html">Page 4</a>
+                    <a href="faqs.html">FAQs</a>
                 </li>
             </ul>            
         </div>
