added description (issue #11)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
         <meta http-equiv="refresh" content="5">
-
+        <link rel="icon" href="public/logo.png" type="image/png">
+        <link rel="shortcut icon" href="public/logo.png" type="image/png">
         <title>Song Rating Website: COMP 333 Assignment</title>
         <meta name="description" content="This is the landing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,6 +37,22 @@
                     <a href="pages/faqs.html">FAQs</a>
                 </li>
             </ul>            
+        </div>
+        <h1 id="description-heading">
+            Music Rating Website
+        </h1>
+        <div class="description">
+            <p class="description-contents">
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                anim id est laborum."
+            </p>
+            <div>
+
+            </div>
         </div>
         
         <script src="" async defer></script>
