--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -9,7 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
         <meta http-equiv="refresh" content="5">
-
+        <link rel="icon" href="../public/logo.png" type="image/png">
+        <link rel="shortcut icon" href="../public/logo.png" type="image/png">
         <title>Pricing</title>
         <meta name="description" content="This is the pricing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +44,7 @@
        <ul id="pricing">
         <li class="pricing-box">
             <h3 class="pricing-tier">
-                Basic
+                Basic (Free)
             </h3>
             <div class="horizontal-line"></div>
             <ul class="price-benefits">
@@ -60,7 +61,7 @@
         </li>
         <li class="pricing-box">
             <h3 class="pricing-tier">
-                Standard
+                Standard ($9.99)
             </h3>
             <div class="horizontal-line"></div>
             <ul class="price-benefits">
@@ -77,7 +78,7 @@
         </li>
         <li class="pricing-box">
             <h3 class="pricing-tier">
-                Pro
+                Pro ($14.99)
             </h3>
             <div class="horizontal-line"></div>
             <ul class="price-benefits">
