--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -9,7 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
         <meta http-equiv="refresh" content="5">
-
+        <link rel="icon" href="../public/logo.png" type="image/png">
+        <link rel="shortcut icon" href="../public/logo.png" type="image/png">
         <title>Pricing</title>
         <meta name="description" content="This is the testimonials page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
