added music recommendations (issue #18)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!--For development purposes only-->
-        <meta http-equiv="refresh" content="5">
         <link rel="icon" href="public/logo.png" type="image/png">
         <link rel="shortcut icon" href="public/logo.png" type="image/png">
         <title>Song Rating Website: COMP 333 Assignment</title>
@@ -38,11 +36,11 @@
                 </li>
             </ul>            
         </div>
-        <h1 id="description-heading">
+        <h1 class="heading">
             Music Rating Website
         </h1>
-        <div class="description">
-            <p class="description-contents">
+        <div class="block">
+            <p class="block-contents">
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
@@ -51,8 +49,43 @@
                 anim id est laborum."
             </p>
             <div>
-
             </div>
+        </div>
+        <h1 class="heading">
+            Music Recommendations
+        </h1>
+        <div class="block">
+            <ul class="block-contents">
+                <p>
+                    While out website is being built we encourage you to check out these songs. We would love to hear
+                    what you think of them, once the music-rating website is built!
+                </p>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=2gf8_kVS1OE" target="_blank">
+                        Octavarium (Dream Theater)
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=hxsld16TjSU" target="_blank">
+                        Invincible (Tool)
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=AkFqg5wAuFk" target="_blank">
+                        Walk (Pantera)
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=kXYiU_JCYtU" target="_blank">
+                        Numb (Linikin Park)
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=rdB13lFexNk" target="_blank">
+                        Pirate of Caribbean theme tune (Hans Zimmer)
+                    </a>
+                </li>
+            </ul>
         </div>
         
         <script src="" async defer></script>
