minor changes (issue #18)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,19 +20,19 @@
         <![endif]-->
         <div id="navbar" class="navbar">
             <div class="logo">
-                <a href="index.html">
-                    <img src="public/logo.png" width="90px" height="90px" />
+                <a href="index.html" aria-label="Homepage">
+                    <img src="public/logo.png" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
                 <li>
-                    <a href="pages/pricing.html">Pricing</a>
+                    <a href="pages/pricing.html" aria-label="Pricing Page">Pricing</a>
                 </li>
                 <li>
-                    <a href="pages/testimonials.html">Testimonials</a>
+                    <a href="pages/testimonials.html" aria-label="Testimonials Page">Testimonials</a>
                 </li>
                 <li>
-                    <a href="pages/faqs.html">FAQs</a>
+                    <a href="pages/faqs.html" aria-label="FAQs page">FAQs</a>
                 </li>
             </ul>            
         </div>
