--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -22,19 +22,19 @@
         <![endif]-->
         <div id="navbar" class="navbar">
             <div class="logo">
-                <a href="../index.html">
-                    <img src="../public/logo.png" width="90px" height="90px" />
+                <a href="../index.html" aria-label="Homepage">
+                    <img src="../public/logo.png" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
                 <li>
-                    <a href="pricing.html">Pricing</a>
+                    <a href="pricing.html" aria-label="Pricing Page">Pricing</a>
                 </li>
                 <li>
-                    <a href="testimonials.html">Testimonials</a>
+                    <a href="testimonials.html" aria-label="Testimonials Page">Testimonials</a>
                 </li>
                 <li>
-                    <a href="faqs.html">FAQs</a>
+                    <a href="faqs.html" aria-label="FAQs Page">FAQs</a>
                 </li>
             </ul>            
         </div>
