added faqs section (issue #3)

--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -38,6 +38,49 @@
                 </li>
             </ul>            
         </div>
-        <script src="" async defer></script>
+        <h1 id="faq-heading">
+            Frequently Asked Questions
+        </h1>
+        <div class="faq-container">
+        <div class="faq">
+            <div class="faq-item">
+              <button id="faq-button-1" aria-expanded="false"><span class="faq-title">Is Taylor Swift the best singer?</span><span class="icon" aria-hidden="true"></span></button>
+              <div class="faq-content">
+                <p>Yes, of course without any second thoughts!</p>
+              </div>
+            </div>
+            <div class="faq-item">
+                <button id="faq-button-1" aria-expanded="false"><span class="faq-title">Does music rating app rate music?</span><span class="icon" aria-hidden="true"></span></button>
+                <div class="faq-content">
+                  <p>It may or maynot</p>
+                </div>
+              </div>
+              <div class="faq-item">
+                <button id="faq-button-1" aria-expanded="false"><span class="faq-title">How do we rat music through a rating app?</span><span class="icon" aria-hidden="true"></span></button>
+                <div class="faq-content">
+                  <p>You need to find the "Rate me" button :)</p>
+                </div>
+              </div>
+        </div>
+        <div>
+
+        </div>
+        <script>
+            const items = document.querySelectorAll(".faq button");
+
+            function toggleFAQ() {
+            const itemToggle = this.getAttribute('aria-expanded');
+            
+            for (i = 0; i < items.length; i++) {
+                items[i].setAttribute('aria-expanded', 'false');
+            }
+            
+            if (itemToggle == 'false') {
+                this.setAttribute('aria-expanded', 'true');
+            }
+            }
+
+            items.forEach(item => item.addEventListener('click', toggleFAQ));
+        </script>
     </body>
 </html>
