--- a/index.html
+++ b/index.html
@@ -41,16 +41,48 @@
         </h1>
         <div class="block">
             <p class="block-contents">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                anim id est laborum."
+                Welcome to the official landing page of our upcoming music rating website! 
+                This elegant website serves as a glimpse into the innovative world of music 
+                exploration and critique. Crafted with precision, this static website is 
+                meticulously developed using HTML and CSS, showcasing our commitment to 
+                seamless user experiences. No external libraries were utilized, ensuring 
+                a lightweight and efficient browsing experience for our users.
             </p>
             <div>
             </div>
         </div>
+
+        <h1 class="heading">
+            Available Features
+        </h1>
+        <div class="block">
+            <ul class="block-contents">
+                <li>
+                    - Rate and review your favorite music with stars
+                </li>
+                <li>
+                   - Discuss your music taste among music lovers
+                </li>
+                <li>
+                   - Share your song list with friends
+                </li>
+                <li>
+                   - Get recommendations on music based on your choice
+                </li>
+
+            </ul>
+            <div>
+            </div>
+        </div>
+
+        <h1 class="heading">
+            Highly Rated Song
+        </h1>
+        <div class="block">
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            </iframe>
+        </div>
+
         <h1 class="heading">
             Music Recommendations
         </h1>
@@ -60,6 +92,11 @@
                     While out website is being built we encourage you to check out these songs. We would love to hear
                     what you think of them, once the music-rating website is built!
                 </p>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=EgBJmlPo8Xw" target="_blank">
+                        Everything I Wanted (Billie Eilish)
+                    </a>
+                </li>
                 <li>
                     <a href="https://www.youtube.com/watch?v=2gf8_kVS1OE" target="_blank">
                         Octavarium (Dream Theater)
