--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -38,6 +38,24 @@
                 </li>
             </ul>            
         </div>
+        <div id = testimonial-heading>
+            Testimonials
+            </div>
+            <div class="container">
+            <img src="../public/music-5833695_1920.jpg" alt="Avatar" style="width:90px">
+            <p><span>Chris Fox.</span> CEO at Mighty Schools. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
+            <p>One of the best music rating apps</p>
+            </div>
+            <div class="container">
+            <img src="../public/music-7009823_1920.png" alt="Avatar" style="width:90px">
+            <p><span>Rebecca Flex.</span> CEO at YouTube. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
+            <p>Amazing discussion community of music lovers</p>
+            </div>
+            <div class="container">
+            <img src="../public/android-1635207_1280.png" alt="Avatar" style="width:90px">
+            <p><span>Anan Afrida.</span> CEO at Google Music. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
+            <p>Taylor Swift still reigns and it is authenticated through this app</p>
+            </div>
         <script src="" async defer></script>
     </body>
 </html>
