--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         </div>
 
         <h1 class="heading">
+            App Screen MockUps
+        </h1>
+        <img class="block" src="public/Screen-Mockup.jpeg" width="100" height="505">
+
+        <h1 class="heading">
             Music Recommendations
         </h1>
         <div class="block">
