--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -23,7 +23,7 @@
         <div id="navbar" class="navbar">
             <div class="logo">
                 <a href="../index.html" aria-label="Homepage">
-                    <img src="../public/logo.png" width="90px" height="90px" alt="logo"/>
+                    <img src="../public/logo.webp" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
@@ -52,7 +52,7 @@
             <p>Amazing discussion community of music lovers</p>
             </div>
             <div class="container">
-            <img src="../public/android-1635207_1280.png" alt="Avatar" style="width:90px">
+            <img src="../public/android-1635207_1280.webp" alt="Avatar" style="width:90px">
             <p><span>Anan Afrida.</span> CEO at Google Music. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>Taylor Swift still reigns and it is authenticated through this app</p>
             </div>
