--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="icon" href="public/logo.png" type="image/png">
-        <link rel="shortcut icon" href="public/logo.png" type="image/png">
+        <link rel="icon" href="public/logo.webp" type="image/png">
+        <link rel="shortcut icon" href="public/logo.webp" type="image/png">
         <title>Song Rating Website: COMP 333 Assignment</title>
         <meta name="description" content="This is the landing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
         <div id="navbar" class="navbar">
             <div class="logo">
                 <a href="index.html" aria-label="Homepage">
-                    <img src="public/logo.png" width="90px" height="90px" alt="logo"/>
+                    <img src="public/logo.webp" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
