--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -23,7 +23,7 @@
         <div id="navbar" class="navbar">
             <div class="logo">
                 <a href="../index.html" aria-label="Homepage">
-                    <img src="../public/logo.png" width="90px" height="90px" alt="logo"/>
+                    <img src="../public/logo.webp" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
