performance and accessibility (issue #5)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="icon" href="public/logo.webp" type="image/png">
-        <link rel="shortcut icon" href="public/logo.webp" type="image/png">
+        <link rel="icon" href="asset/logo.webp" type="image/png">
+        <link rel="shortcut icon" href="asset/logo.webp" type="image/png">
         <title>Song Rating Website: COMP 333 Assignment</title>
         <meta name="description" content="This is the landing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
         <div id="navbar" class="navbar">
             <div class="logo">
                 <a href="index.html" aria-label="Homepage">
-                    <img src="public/logo.webp" width="90px" height="90px" alt="logo"/>
+                    <img src="asset/logo.webp" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
@@ -76,17 +76,16 @@
         </div>
 
         <h1 class="heading">
-            Highly Rated Song
+            Mini Preview
         </h1>
         <div class="block">
-            <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe>
+            <iframe loading="lazy" title="link"  width="420" height="345" src="index.html"></iframe>
         </div>
 
         <h1 class="heading">
             App Screen MockUps
         </h1>
-        <img class="block" src="public/Screen-Mockup.jpeg" width="100" height="505">
+        <img class="block" src="asset/Screen-Mockup.webp" width="100" height="505">
 
         <h1 class="heading">
             Music Recommendations
@@ -129,7 +128,5 @@
                 </li>
             </ul>
         </div>
-        
-        <script src="" async defer></script>
     </body>
 </html>
