--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -9,8 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
         <meta http-equiv="refresh" content="5">
-        <link rel="icon" href="../public/logo.png" type="image/png">
-        <link rel="shortcut icon" href="../public/logo.png" type="image/png">
+        <link rel="icon" href="../asset/logo.webp" type="image/png">
+        <link rel="shortcut icon" href="../asset/logo.webp" type="image/png">
         <title>Pricing</title>
         <meta name="description" content="This is the pricing page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
         <div id="navbar" class="navbar">
             <div class="logo">
                 <a href="../index.html" aria-label="Homepage">
-                    <img src="../public/logo.webp" width="90px" height="90px" alt="logo"/>
+                    <img src="../asset/logo.webp" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
@@ -94,6 +94,5 @@
             </ul>
         </li>
        </ul>
-        <script src="" async defer></script>
     </body>
 </html>
