--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -9,8 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
         <meta http-equiv="refresh" content="5">
-        <link rel="icon" href="../public/logo.png" type="image/png">
-        <link rel="shortcut icon" href="../public/logo.png" type="image/png">
+        <link rel="icon" href="../asset/logo.webp" type="image/png">
+        <link rel="shortcut icon" href="../asset/logo.webp" type="image/png">
         <title>Pricing</title>
         <meta name="description" content="This is the testimonials page of a song rating website. The website is made as an assignment for COMP 333 class at Wesleyan University.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
         <div id="navbar" class="navbar">
             <div class="logo">
                 <a href="../index.html" aria-label="Homepage">
-                    <img src="../public/logo.webp" width="90px" height="90px" alt="logo"/>
+                    <img src="../asset/logo.webp" width="90px" height="90px" alt="logo"/>
                 </a>
             </div>
             <ul>
@@ -42,20 +42,19 @@
             Testimonials
             </div>
             <div class="container">
-            <img src="../public/music-5833695_1920.jpg" alt="Avatar" style="width:90px">
+            <img src="../asset/music-5833695_1920.webp" alt="Avatar" style="width:90px">
             <p><span>Chris Fox.</span> CEO at Mighty Schools. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>One of the best music rating apps</p>
             </div>
             <div class="container">
-            <img src="../public/music-7009823_1920.png" alt="Avatar" style="width:90px">
+            <img src="../asset/music-7009823_1920.webp" alt="Avatar" style="width:90px">
             <p><span>Rebecca Flex.</span> CEO at YouTube. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>Amazing discussion community of music lovers</p>
             </div>
             <div class="container">
-            <img src="../public/android-1635207_1280.webp" alt="Avatar" style="width:90px">
+            <img src="../asset/android-1635207_1280.webp" alt="Avatar" style="width:90px">
             <p><span>Anan Afrida.</span> CEO at Google Music. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>Taylor Swift still reigns and it is authenticated through this app</p>
             </div>
-        <script src="" async defer></script>
     </body>
 </html>
