tested accessiblity and performance (issue #5)

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
         <h1 class="heading">
             App Screen MockUps
         </h1>
-        <img class="block" src="asset/Screen-Mockup.webp" width="100" height="505">
+        <img class="block" src="asset/Screen-Mockup.webp" width="100" height="505" alt="mock">
 
         <h1 class="heading">
             Music Recommendations
         </h1>
         <div class="block">
+            <p>
+                While out website is being built we encourage you to check out these songs. We would love to hear
+                what you think of them, once the music-rating website is built!
+            </p>
             <ul class="block-contents">
-                <p>
-                    While out website is being built we encourage you to check out these songs. We would love to hear
-                    what you think of them, once the music-rating website is built!
-                </p>
                 <li>
                     <a href="https://www.youtube.com/watch?v=EgBJmlPo8Xw" target="_blank">
                         Everything I Wanted (Billie Eilish)
